2003-12-10  Roland Clobus <rclobus@bigfoot.com>
	* ai/greedy.c: Fixed AI to build only on land.
	* common/map_query.c: Fixed AI placing robber in water.

2003-12-05  Bas Wijnen <b.wijnen@phys.rug.nl>
	* common/build_rec.h, common/cards.h, common/common_gtk.h,
	common/cost.h: Added some #include statements
	* common/network.h, common/state.h: Removed the comma after the last
	value in the enum.
	
2003-12-02  Roland Clobus <rclobus@bigfoot.com>
	* seafarers.game, seafarers-gold.game: removed unknown keyword.
	* Cube.game, Another_swimming_in_the_wall.game, Evil_square.game,
	GuerreDe100ans.game, Mini_another_swimming_pool_in_the_wall.game:
	Added games by LT-P <LT-P@LT-P.net>
	* henjes.game: Added game by Robert Henjes <robert.henjes@web.de>
	* lorindol.game: Added game by Martin Brotzeller
	<lorindol@cip.informatik.uni-wuerzburg.de>
	* server/Makefile.am: changed to add the new games
	* server/gnocatan-server-gtk.c: raised the limit for victory points

2003-11-16  Roland Clobus <rclobus@bigfoot.com>
	* client/gui.c: Reduced startup window size for smaller displays.
	* client/player.c (player_build_add), server/pregame.c
	(send_gameinfo): Fixed bridges.

2003-11-05  Roland Clobus <rclobus@bigfoot.com>
	* server/gnocatan-server-gtk.c: Fixed bug 816848
	
2003-11-05  Roland Clobus <rclobus@bigfoot.com>
	* client/chat.c, client/player.c, common/log.c, common/log.h: Bug
	#826894: First message is not time stamped.
	
2003-11-05  Roland Clobus <rclobus@bigfoot.com>
	* ai/client.c, server/player.c, server/server.c: Refuse connection
	when a game is over.
	* common/game.c, common/game.h, server/gnocatan-server-gtk.c,
	server/server.c, server/server.h: Repaired -x option, implemented
	rudimentary restart.
	* client/Makefile.am, common/Makefile.am, */config-gnome.c,
	*/config-gnome.h: Moved config-gnome.* from client/ to common/
	* server/gnocatan-server-gtk.c: Added save settings.
	* server/gnocatan-server.c, server/gnocatan-server.h: Ordered the
	names of the games.
